# CPPMatrix

./: .gitignore  CMakeLists.txt  Doxyfile  Matrix.cpp  Matrix.h  README.md  main.cpp
docs/dev/: README.md  basic-implementation.md  determinant.md
docs/user/: README.md  accessor-functions.md  getting-started.md
include/: CPPMatrix.h
src/: Matrix.cpp  Matrix.h
test/: ConstructorTest.cpp  DetTest.cpp  MainTest.cpp  MainTest.h  OperatorTest.cpp  RCVectorsTest.cpp  TransposeTest.cpp
tests/: ConstructorTest.cpp  DetTest.cpp  MainTest.cpp  MainTest.h  MultTest.cpp  OperatorTest.cpp  RCVectors.cpp  RCVectorsTest.cpp  TransposeTest.cpp  test.cpp
